[gd_scene load_steps=4 format=3 uid="uid://d1n5hu37p0cb8"]

[ext_resource type="Script" uid="uid://l4wpu1ak584h" path="res://scripts/power.gd" id="1_8e8e8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8e8e8"]
radius = 194.00002
height = 692.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8e8e8"]
radius = 6.0827627

[node name="Panel" type="ColorRect"]
offset_left = 590.0
offset_top = 32.0
offset_right = 870.0
offset_bottom = 600.0
rotation = 1.5707964
color = Color(0.137255, 0, 0.854902, 1)
script = ExtResource("1_8e8e8")

[node name="Panel2" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 296.0
offset_bottom = 584.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(141.00002, 278)
shape = SubResource("CapsuleShape2D_8e8e8")

[node name="ZoomPoint" type="Node2D" parent="."]
position = Vector2(145.00002, 278)

[node name="Speckle" type="ColorRect" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = -29.0
offset_top = -11.999987
offset_right = -18.538773
offset_bottom = -0.5729847
color = Color(0.34325507, 0.3346033, 0.31122136, 1)

[node name="Area2D" type="Area2D" parent="Speckle"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Speckle/Area2D"]
position = Vector2(4.4612503, 5.427002)
shape = SubResource("CircleShape2D_8e8e8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
